Fixing visibility while dragging bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -211,6 +211,7 @@ body {
                             .active-item {
                                 visibility: hidden;
                             }
+
                         } 
 
                         .active[data-value="low"] {
@@ -334,7 +335,7 @@ body {
 
                         .is-animating {
                             border-color: transparent;
-                            transition: border-color 0.5s ease-in-out;
+                            transition: border-color 0.3s ease-in-out;
                         }
                     }
                 }
